# simpleTCP

./: .gitignore  CMakeLists.txt
src/app/: main.c
src/app/echo/: tcp_echo_client.c  tcp_echo_client.h  tcp_echo_server.c  tcp_echo_server.h
src/net/net/: cfg.h  dbg.h  exmsg.h  fixedqueue.h  mblock.h  net.h  net_err.h  nlist.h  nlocker.h  pktbuf.h  sys.h
src/net/src/: dbg.c  exmsg.c  fixedqueue.c  mblock.c  net.c  nlist.c  nlocker.c  pktbuf.c
src/plat/: net_plat.c  net_plat.h  netinterface_pcap.c  netinterface_pcap.h  sys_plat.c  sys_plat.h
